bug: fix z-index of header.
Didn't had the z-index set, so the header was going below the rest of the elements. Add a z-index to fix it.

Also, add a drop-shadow.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -155,6 +155,8 @@ header {
   padding: 0 0.8rem;
   position: sticky;
   top: 0;
+  z-index: 1000;
+  box-shadow: 0 -5px 21px 2px var(--bg-secondary-dark);
 
   nav {
     display: flex;
